--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "strict": true,
     "lib": ["dom", "dom.iterable", "esnext"],
     "moduleResolution": "node",
-    "types": ["jest"]
+    "types": ["node", "jest", "@testing-library/jest-dom"]
   },
   "include": ["./script.ts"],
   "exclude": ["node_modules"]
