--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/jest": "^29.5.14",
-    "jest": "^29.7.0"
-  },
-  "dependencies": {
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^25.0.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2"
   }
